kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-management-service
  labels:
    app: inventory-management
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '3000'
spec:
  selector:
    app: inventory-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
